--- a/MagicalRecordSample/Base.lproj/Main.storyboard
+++ b/MagicalRecordSample/Base.lproj/Main.storyboard
@@ -23,7 +23,13 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="MagicalRecordSample" id="yeE-Bm-jex"/>
+                    <navigationItem key="navigationItem" title="MagicalRecordSample" id="yeE-Bm-jex">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="uxg-Br-cSS">
+                            <connections>
+                                <segue destination="vXZ-lx-hvc" kind="push" id="xqe-7v-So9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6wM-oc-lk8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -57,6 +63,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="133-4a-3IK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
